--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,21 +1,21 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <VBox fx:controller="sample.Controller"
       xmlns:fx="http://javafx.com/fxml" spacing="5">
-    <padding>
-        <Insets bottom="5" right="5" left="5" top="5"/>
-    </padding>
-
-    <TextArea  fx:id="textArea"  VBox.vgrow="ALWAYS"  editable="false" />
-    <HBox spacing="5">
-        <TextField fx:id="textField" HBox.hgrow="ALWAYS"/>
-        <Button text="Send"  defaultButton="false" onAction="#btnSendClick"/>
+    <HBox fx:id="loginBox" spacing="5" VBox.vgrow="ALWAYS">
+        <TextField fx:id="loginField" promptText="Login"/>
+        <PasswordField fx:id="passwordField" promptText="Password"/>
+        <Button text="Auth" defaultButton="true" onAction="#btnAuthClick"/>
     </HBox>
 
-
+    <HBox fx:id="messageBox" visible="false" spacing="5">
+        <VBox spacing="5">
+            <TextArea fx:id="textArea" VBox.vgrow="ALWAYS"/>
+            <HBox spacing="5">
+                <TextField fx:id="textField" HBox.hgrow="ALWAYS"/>
+                <Button text="Send" defaultButton="true" onAction="#btnSendClick"/>
+            </HBox>
+        </VBox>
+        <ListView fx:id="clientList" minWidth="200" maxWidth="200" onMouseClicked="#selectClient"/>
+    </HBox>
 </VBox>
